--- a/style/style.css
+++ b/style/style.css
@@ -2,12 +2,24 @@ body {
     background-color: snow;
 }
 
-#hui {
-    font: 200% serif;
+p {
+    font: 100% Comic Sans MS, Comic Sans, cursive;
+}
+
+li {
+    font: 100% Comic Sans MS, Comic Sans, cursive;
+}
+
+span {
+    font: 100% Comic Sans MS, Comic Sans, cursive;
+}
+
+#wirtesLines {
+    font: 200% Comic Sans MS, Comic Sans, cursive;
     font-weight: bold;
 }
 
-.imghui {
+.imgHeader {
     width: 10%;
     height: 70%;
     box-shadow: 0 0 3px 0;
@@ -39,13 +51,13 @@ body {
 
 header {
     height: 250px;
-    background-color: #ffa8a8;
+    background-color: #dadada;
 }
 
 .nav-content {
     padding: 10px;
     height: 40px;
-    background-color: #ffe0e0;
+    background-color: #cacaca;
 }
 
 .marBetween {
@@ -54,19 +66,14 @@ header {
 }
 
 .A-nav :hover {
-    text-decoration:none !important;
+    text-decoration: none !important;
 }
 
 .A-nav {
     color: black !important;
 }
 
-/*#h1hui {*/
-/*    max-width: 1000px;*/
-/*    margin: 0 auto;*/
-/*}*/
-
-.hui {
+.mainMenuDiv {
     width: 78%;
     margin: 0 auto;
     margin-top: 1%;
@@ -74,26 +81,26 @@ header {
     display: flex;
 }
 
-.borderHui {
+.borderBlock {
     margin-top: 1%;
     padding: 1%;
     border-bottom: 1px solid black;
 }
 
-.imghui1 {
+.DetailsOfPersonality {
     margin-right: 3%;
     width: 15%;
     height: 90%;
 }
 
-.nav1hui1 {
+.mainMenu {
     width: 78%;
     margin: 0 auto;
     margin-top: 1%;
     padding: 1%;
 }
 
-.nav1hui1 p {
+.mainMenu p {
     font-size: 120%;
 }
 
@@ -101,11 +108,16 @@ header {
     font-size: 120%;
 }
 
-.spanBloxin {
+.pOpacity {
     opacity: 50%;
     font-style: italic;
     font-size: 80%;
     display: flex;
+}
+
+#fltRight {
+    padding: 1rem;
+    float: right;
 }
 
 .imgMrgn {
@@ -115,3 +127,156 @@ header {
     width: 50%;
 }
 
+.ta {
+    height: 100px;
+    width: 600px;
+    transition: all 1s;
+    -moz-transition: all 1s;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+}
+
+.mainBody {
+    background-color: #fdfdfd;
+    max-width: 95%;
+    margin-left: 11%;
+    margin-right: 11%;
+    box-shadow: 0 0 2px 0;
+}
+
+.vid {
+    text-align: center;
+    height: 485px;
+}
+
+iframe {
+    width: 57.5%;
+    height: 489px;
+}
+
+#mar-left1 {
+    margin-left: 9%;
+}
+
+#mar-left2 {
+    margin-left: 11%;
+}
+
+#mar-left3 {
+    margin-left: 10%;
+}
+
+#mar-left4 {
+    margin-left: 9%;
+}
+#mar-left5 {
+    margin-left: 9%;
+}
+
+
+.mar-top {
+    margin-top: 2%;
+}
+
+
+#discriptionPersonality {
+    float: left;
+    box-shadow: 0 0 5px 0;
+}
+
+.heightDiv {
+    height: 100%;
+}
+
+#dropMoreInfo1 {
+    overflow:hidden;
+    font-size: 130%;
+}
+
+#dropMoreInfo2 {
+    overflow:hidden;
+    font-size: 130%;
+}
+
+#dropMoreInfo3 {
+    overflow:hidden;
+    font-size: 130%;
+}
+
+#dropMoreInfo4 {
+    overflow:hidden;
+    font-size: 130%;
+}
+
+#disNone {
+    display:none;
+}
+
+#disNone2 {
+    display:none;
+}
+
+.minimized {
+    cursor: pointer;
+    border: 1px solid #FFF;
+    margin-left: 15%;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    width: 70%;
+}
+.minimized:hover {
+    border: 1px solid yellow;
+}
+
+#magnify {
+    display: none;
+    position: fixed;
+    max-width: 700px;
+    height: auto;
+    z-index: 9999;
+}
+#magnify img {
+    width: 100%;
+}
+
+#overlay {
+    display: none;
+    background: #000;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0.5;
+    z-index: 9990;
+}
+
+#close-popup {
+    width: 30px;
+    height: 30px;
+    background: #FFFFFF;
+    border: 1px solid #AFAFAF;
+    border-radius: 15px;
+    cursor: pointer;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+
+#close-popup i {
+    width: 30px;
+    height: 30px;
+    background: url(https://codernote.ru/files/cross.png) no-repeat center center;
+    background-size: 16px 16px;
+    display: block;
+}
+
+#close-popup:hover {
+    animation: rota 4s infinite normal;
+    -webkit-animation-iteration-count: 1;
+    animation-iteration-count: 1;
+}
+
+.pCenter p {
+    justify-content: center;
+}
