--- a/style/style.css
+++ b/style/style.css
@@ -79,6 +79,7 @@ header {
     margin-top: 1%;
     padding: 1%;
     display: flex;
+    padding-top: 35px;
 }
 
 .borderBlock {
@@ -91,6 +92,7 @@ header {
     margin-right: 3%;
     width: 15%;
     height: 90%;
+    box-shadow: 0 0 5px 0;
 }
 
 .mainMenu {
@@ -109,6 +111,14 @@ header {
 }
 
 .pOpacity {
+    opacity: 50%;
+    font-style: italic;
+    font-size: 80%;
+    display: flex;
+    margin-right: 13%;
+}
+
+.pOpacityDis {
     opacity: 50%;
     font-style: italic;
     font-size: 80%;
@@ -208,18 +218,15 @@ iframe {
     font-size: 130%;
 }
 
-#disNone {
-    display:none;
-}
-
-#disNone2 {
-    display:none;
+#dropMoreInfo5 {
+    overflow:hidden;
+    font-size: 130%;
 }
 
 .minimized {
     cursor: pointer;
     border: 1px solid #FFF;
-    margin-left: 15%;
+    margin-left: 8%;
     margin-top: 3%;
     margin-bottom: 3%;
     width: 70%;
@@ -280,3 +287,4 @@ iframe {
 .pCenter p {
     justify-content: center;
 }
+
